// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Form field HTML test: empty field 1`] = `
<div
  class="jsde-field"
>
  <label
    class="jsde-field__label"
  >
    field_1
  </label>
  <input
    class="jsde-field__input"
    value=""
  />
</div>
`;

exports[`Form field HTML test: field with data 1`] = `
<div
  class="jsde-field"
>
  <label
    class="jsde-field__label"
  >
    field_1
  </label>
  <input
    class="jsde-field__input"
    value="t1"
  />
</div>
`;

exports[`Form field with reference: field with ref 1`] = `
<div
  class="jsde-field"
>
  <label
    class="jsde-field__label jsde-field__label--ref"
  >
    field_1
  </label>
  <input
    class="jsde-field__input"
    value=""
  />
</div>
`;
